fix api-tree overflow style bug.

--- a/app/styles/partials/_index.scss
+++ b/app/styles/partials/_index.scss
@@ -13,9 +13,7 @@ header {
 }
 .per-api {
     padding: 0 0 0 0;
-    position: relative;
-    overflow-x: auto;
-    overflow-y: hidden;
+
     margin: 0 0 2em 0;
     border-bottom: 1px solid #ddd;
     box-shadow: 0 5px 4px -5px purple;
@@ -36,6 +34,11 @@ header {
 }
 .api-test {
     @extend .api-edit;
+}
+.api-tree-wrapper {
+    position: relative;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 .api-tree {
     position: relative;
